# sentinel

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
cdk/: cdk_stack.py
src/config/: app_config.py  secrets_manager_service.py
src/constants/: aws_secrets_service_key_names.py
src/controllers/: notification_controller.py
src/injection/: container.py
src/model/: __init__.py  notification_model.py  notification_request_model.py
src/routes/: notification_routes.py
src/service/: sentinel_service.py
src/service/notification/: __init__.py  base_notification_service.py  email_notification_service.py  teams_notification_service.py
