[project]
name = "sentinel"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.244.0",
    "boto3>=1.42.74",
    "dependency-injector>=4.49.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]
